fix button spacing

--- a/src/components/Tools/Tools.module.css
+++ b/src/components/Tools/Tools.module.css
@@ -60,4 +60,6 @@
   text-align: center;
   padding: 10px;
   margin: 0px;
+  margin-left: 20px;
+  margin-top: 3px;
 }
